# terraform-config-python

./: .gitignore  config.yaml.example  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: test.yml
src/infra_config/: __init__.py  cli.py
src/infra_config/models/: __init__.py  config.py  terraform.py
src/infra_config/transformers/: __init__.py  base.py  database.py  storage.py
terraform/modules/postgresql/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/test/: main.tf  variables.tf
tests/: conftest.py  test_terraform_plan.py  test_transform.py
tests/fixtures/: dev_minimal.yaml  production_full.yaml
